examples/test/testpolicy13495.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13495
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key38: value10
      key49: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value43
      podSelector:
        matchLabels:
          key3: value14
          key34: value1
          key27: value44
